Make sure list item numbers/bullets don't get cropped in mobile journal
Fixes #24

--- a/wp-content/themes/mediaplus-2017/assets/css/pages/journal.scss
+++ b/wp-content/themes/mediaplus-2017/assets/css/pages/journal.scss
@@ -176,6 +176,14 @@
     margin-bottom: 1.5em;
   }
 
+  ul {
+    margin-left: 1.25em;
+  }
+  
+  ol {
+    margin-left: 1em;
+  }
+
   li {
     margin-bottom: .75em;
   }
@@ -286,6 +294,10 @@
     blockquote {
       padding-left: 0;
       max-width: 70%;
+    }
+
+    ul, ol {
+      margin-left: 0;
     }
 
     img,
